@@ -28,7 +28,7 @@ if (sizeof ($config['extensions']) == 0) {
 	return;
 }
 
-echo '<h2>'.__('Defined extensions').'</h2>';
+echo '<h2>'.__('Extensions').' &raquo; '.__('Defined extensions').'</h2>';
 $table->width = '95%';
 $table->head = array ();
 $table->head[0] = __('Name');
